tests/lustre/syntax-errors/array-syntax.lus
node slide (const n:int; s:int) returns(A: int^n);
let
    A[i] = if i = 0 then s else (-1 -> pre A[i-1]);
    %PROPERTY n > 1 => (true -> A[1] = pre s);
tel
